--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
       background: #2F3277;
     }
     
+
     .modo-luna  span {
       visibility: hidden;
       position: relative;
-      display: inline-block;
+      display: inline-flex;
     }
 
     .modo-luna span:after {
